# Password-Manager

./: Cargo.toml  password.txt
password-folder/: 408KThbMyhZR6JtI8FXe3A==  EEeOvnVX5wlhHK+ncuEYnQ==  GC0DLRqGmKUoPsRb1ReKpA==  ISSJtfd8PVbjC7Ke14ilpA==  xiGCAR5MD1nY21lMINQaLQ==
password_data/: nxWLunD+BkEESYycxgTguQ==
src/: add_password_form.rs  login_page.rs  main.rs  password_view.rs  top_panel.rs
