[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26"
eframe = "0.26"
magic-crypt = "3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
